# thingsetplusplus

./: .clang-format  .gitignore  .gitlab-ci.yml  .gitmodules  CMakeLists.txt  LICENSE  README.md  west.yml
.github/workflows/: build.yml
examples/asioclient/: CMakeLists.txt  main.cpp
examples/asioserver/: CMakeLists.txt  main.cpp
examples/canclient/: CMakeLists.txt  main.cpp
examples/canserver/: CMakeLists.txt  main.cpp
examples/canserver/include/: format.hpp
examples/client/: CMakeLists.txt  main.cpp
examples/eeprom/: CMakeLists.txt  main.cpp
examples/server/: CMakeLists.txt  main.cpp
examples/socketclient/: CMakeLists.txt  main.cpp
examples/socketserver/: CMakeLists.txt  main.cpp
examples/zephyrcanclient/: CMakeLists.txt  main.cpp  prj.conf
examples/zephyrcanserver/: CMakeLists.txt  main.cpp  prj.conf
examples/zephyripclient/: CMakeLists.txt  prj.conf
examples/zephyripserver/: CMakeLists.txt  prj.conf
include/: Eui.hpp  IdentifiableThingSetNode.hpp  IdentifiableThingSetNode.tpp  StringLiteral.hpp  ThingSet.hpp  ThingSetArray.hpp  ThingSetArray.tpp  ThingSetAsyncSocketServerTransport.hpp  ThingSetBinaryDecoder.hpp  ThingSetBinaryEncoder.hpp  ThingSetBinaryEncoder.tpp  ThingSetClient.hpp  ThingSetClientTransport.hpp  ThingSetCompatibility.hpp  ThingSetFunction.hpp  ThingSetGroup.hpp  ThingSetNode.hpp  ThingSetParameter.hpp  ThingSetParentNode.hpp  ThingSetProperty.hpp  ThingSetProperty.tpp  ThingSetRecordCollection.hpp  ThingSetRegistry.hpp  ThingSetRequestContext.hpp  ThingSetServer.hpp  ThingSetServerTransport.hpp  ThingSetSocketServerTransport.hpp  ThingSetType.hpp  ThingSetValue.hpp  ThingSetValue.tpp
include/asio/: ThingSetAsyncSocketClientTransport.hpp  ThingSetAsyncSocketServerTransport.hpp
include/can/: AbstractCanFrame.hpp  CanID.hpp  StreamingThingSetBinaryEncoder.hpp  ThingSetCanServerTransport.hpp
include/canbus/: isotp_fast.h
include/internal/: always_false.hpp  bind_to_tuple.hpp  logging.hpp  num_fields.hpp  thingset.h
include/thingset++/: Eui.hpp  FlatteningIterator.hpp  IdentifiableThingSetNode.hpp  IntrusiveLinkedList.hpp  Streaming.hpp  StreamingQueuingThingSetBinaryDecoder.hpp  StreamingThingSetBinaryDecoder.hpp  StreamingThingSetBinaryEncoder.hpp  StreamingTransportThingSetBinaryEncoder.hpp  StringLiteral.hpp  ThingSet.hpp  ThingSetAccess.hpp  ThingSetBinaryDecoder.hpp  ThingSetBinaryEncoder.hpp  ThingSetClient.hpp  ThingSetClientTransport.hpp  ThingSetCompatibility.hpp  (+24 more)
src/: CMakeLists.txt  Eui.cpp  ThingSetAsyncSocketServerTransport.cpp  ThingSetBinaryDecoder.cpp  ThingSetBinaryEncoder.cpp  ThingSetClient.cpp  ThingSetDecoder.cpp  ThingSetEncoder.cpp  ThingSetNode.cpp  ThingSetParentNode.cpp  ThingSetPersistence.cpp  ThingSetRegistry.cpp  ThingSetRequestContext.cpp  ThingSetResult.cpp  ThingSetServer.cpp  ThingSetSocketServerTransport.cpp  ThingSetTextDecoder.cpp  ThingSetTextEncoder.cpp  ThingsetTextEncoder.cpp  ZephyrLogRegistration.cpp
src/asio/: ThingSetAsyncSocketClientTransport.cpp  ThingSetAsyncSocketServerTransport.cpp
src/can/: CMakeLists.txt  CanID.cpp  StreamingCanThingSetBinaryEncoder.cpp  StreamingThingSetBinaryEncoder.cpp  ThingSetCanClientTransport.cpp  ThingSetCanInterface.cpp  ThingSetCanServerTransport.cpp  ThingSetCanSubscriptionTransport.cpp
src/can/socketcan/: CMakeLists.txt  CanFrame.cpp  IsoTpCanSocket.cpp  RawCanSocket.cpp  RawCanSocketListener.cpp  StreamingCanThingSetBinaryDecoder.cpp  ThingSetSocketCanClientTransport.cpp  ThingSetSocketCanInterface.cpp  ThingSetSocketCanServerTransport.cpp  ThingSetSocketCanSubscriptionTransport.cpp
src/can/zephyr/: CMakeLists.txt  CanFrame.cpp  Kconfig  ThingSetZephyrCanClientTransport.cpp  ThingSetZephyrCanInterface.cpp  ThingSetZephyrCanRequestResponseContext.cpp  ThingSetZephyrCanServerTransport.cpp  ThingSetZephyrCanSubscriptionTransport.cpp  isotp_fast.cpp  isotp_fast_internal.h
src/can/zephyr/isotp/: CMakeLists.txt  Kconfig  isotp_fast.c
src/ip/: CMakeLists.txt  InterfaceInfo.cpp  StreamingUdpThingSetBinaryDecoder.cpp
src/ip/asio/: AsioInterfaceInfo.cpp  CMakeLists.txt  ThingSetAsyncSocketClientTransport.cpp  ThingSetAsyncSocketServerTransport.cpp  ThingSetAsyncSocketSubscriptionTransport.cpp
src/ip/sockets/: CMakeLists.txt  Kconfig  NetworkManagement.cpp  SocketEndpoint.cpp  ThingSetSocketClientTransport.cpp  ThingSetSocketServerTransport.cpp  ThingSetSocketSubscriptionTransport.cpp
src/ip/sockets/zephyr/: Kconfig
src/ip/zsock/: CMakeLists.txt  SocketEndpoint.cpp  ThingSetZephyrSocketClientTransport.cpp  ThingSetZephyrSocketServerTransport.cpp  ThingSetZephyrSocketSubscriptionTransport.cpp
src/socketcan/: ThingSetSocketCanInterface.cpp
src/udp/: CMakeLists.txt
src/udp/asio/: CMakeLists.txt  ThingSetAsyncSocketClientTransport.cpp  ThingSetAsyncSocketServerTransport.cpp  ThingSetAsyncSocketSubscriptionTransport.cpp
src/zephyr/: CMakeLists.txt  StreamingZephyrShellThingSetBinaryEncoder.cpp  ThingSetEeprom.cpp  ThingSetZephyrShellServerTransport.cpp
src/zsock/: ThingSetZephyrSocketClientTransport.cpp  ThingSetZephyrSocketServerTransport.cpp
tests/: CMakeLists.txt  TestAsioIpClientServer.cpp  TestAsioIpPublishSubscribe.cpp  TestBinaryDecoder.cpp  TestBinaryDecodingRecords.cpp  TestBinaryEncoder.cpp  TestBinaryEncodingRecords.cpp  TestCompatibility.cpp  TestEui.cpp  TestFunctions.cpp  TestIntrusiveLinkedList.cpp  TestProperties.cpp  TestRecordMembers.cpp  TestRecords.cpp  TestRequestRewriter.cpp  TestSocketIpClientServer.cpp  TestStreamingBinaryEncoder.cpp  TestSubsets.cpp  TestTextDecoder.cpp  TestTextEncoder.cpp  TestTextEncodingRecords.cpp
tests/include/: Buffer.hpp
tests/zephyr/: CMakeLists.txt  README.md  prj.conf  testcase.yaml
tests/zephyr/can/: prj.conf
tests/zephyr/can/src/: main.cpp
tests/zephyr/overlays/: native_sim.conf  native_sim_64.overlay
tests/zephyr/persistence/: README.md  prj.conf  testcase.yaml
tests/zephyr/persistence/boards/: native_posix.overlay  native_posix_64.conf
tests/zephyr/persistence/src/: main.cpp
tests/zephyr/src/: main.cpp
zephyr/: CMakeLists.txt  Kconfig  module.yml
(+77 files in other folders)
